make enigma code style consistent and modernise, take 2 (#32)
* run intellij code cleanup on `enigma` package

* code cleanup: `enigma` package tests

* code cleanup: everything else

* Revert "code cleanup: `enigma` package tests"

This reverts commit 90110d3d76c033a28a32902021f38d56afcc19b6.

* remove pointless empty space

* spaces -> tabs

* bump version to `1.5.0`

* Revert "bump version to `1.5.0`"

This reverts commit 2514d0d157129f0d3c2c9f3c62e67f24670e4b61.

* bump version to `1.5.0`

* Revert "bump version to `1.5.0`"

This reverts commit b05ba6c63a81ef6589d8cc3bbc5ba444379db7c3.

* automated code cleanup yay

* I just love unary operators

* fix build

* silly unused parameter