@@ -3,14 +3,12 @@ package cuchaz.enigma.config;
 import org.tinylog.Logger;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Deque;
 import java.util.LinkedList;
 
 public class ConfigContainer {
-
 	private Path configPath;
 	private boolean existsOnDisk;
 
@@ -24,7 +22,7 @@ public class ConfigContainer {
 		if (this.configPath == null) throw new IllegalStateException("File has no config path set!");
 		try {
 			Files.createDirectories(this.configPath.getParent());
-			Files.write(this.configPath, this.serialize().getBytes(StandardCharsets.UTF_8));
+			Files.writeString(this.configPath, this.serialize());
 			this.existsOnDisk = true;
 		} catch (IOException e) {
 			Logger.error(e, "Failed to save config file!");
@@ -95,5 +93,4 @@ public class ConfigContainer {
 		});
 		return cc;
 	}
-
 }
